--- a/src/main/webapp/app/entities/points/points.component.html
+++ b/src/main/webapp/app/entities/points/points.component.html
@@ -1,19 +1,29 @@
 <div>
-    <h2 id="page-heading">
-        <span jhiTranslate="healthPointsApp.points.home.title">Points</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-points" [routerLink]="['/points/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span class="hidden-sm-down"  jhiTranslate="healthPointsApp.points.home.createLabel">
-            Create new Points
-            </span>
-        </button>
-    </h2>
+
     <jhi-alert></jhi-alert>
+
     <div class="row">
-        <div class="col-sm-12">
+
+        <div class="col-sm-8">
+            <h2 id="page-heading" jhiTranslate="healthPointsApp.points.home.title">Points</h2>
+        </div>
+
+        <div class="col-sm-4 text-right">
+            <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-points"
+                    [routerLink]="['/points/new']"
+                    [ngbTooltip]="addTooltip" placement="bottom">
+                <fa-icon [icon]="'plus'"></fa-icon>
+                <ng-template #addTooltip>
+                    <span class="hidden-sm-down"  jhiTranslate="healthPointsApp.points.home.createLabel">Add Points</span>
+                </ng-template>
+            </button>
+
+
+
             <form name="searchForm" class="form-inline">
-                <div class="input-group w-100 mt-3">
-                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'healthPointsApp.points.home.search' | translate }}">
+                <div class="input-group w-100 mr-1">
+                    <input type="text" class="form-control" id="currentSearch" name="currentSearch" placeholder="{{ 'healthPointsApp.points.home.search' | translate }}"
+                           [(ngModel)]="currentSearch">
                     <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
                         <fa-icon [icon]="'search'"></fa-icon>
                     </button>
@@ -22,8 +32,11 @@
                     </button>
                 </div>
             </form>
+
         </div>
     </div>
+
+
     <br/>
     <div class="table-responsive" *ngIf="points">
         <table class="table table-striped">
@@ -43,9 +56,22 @@
             <tr *ngFor="let points of points ;trackBy: trackId">
                 <td><a [routerLink]="['/points', points.id, 'view' ]">{{points.id}}</a></td>
                 <td>{{points.date | date:'mediumDate'}}</td>
-                <td>{{points.exercise}}</td>
-                <td>{{points.meals}}</td>
-                <td>{{points.alcohol}}</td>
+
+
+                <td class="text-center">
+                    <fa-icon [icon]="points.exercise ? 'heart' : 'times'" aria-hidden="true"
+                             class="{{points.exercise ? 'text-success' : 'text-danger'}}"></fa-icon>
+                </td>
+                <td class="text-center">
+                    <fa-icon [icon]="points.meals ? 'heart' : 'times'" aria-hidden="true"
+                             class="{{points.meals ? 'text-success' : 'text-danger'}}"></fa-icon>
+                </td>
+                <td class="text-center">
+                    <fa-icon [icon]="points.alcohol ? 'heart' : 'times'" aria-hidden="true"
+                             class="{{points.alcohol ? 'text-success' : 'text-danger'}}"></fa-icon>
+                </td>
+
+
                 <td>{{points.notes}}</td>
                 <td>
                     {{points.user?.login}}
