--- a/src/main/webapp/app/entities/points/points-update.component.html
+++ b/src/main/webapp/app/entities/points/points-update.component.html
@@ -25,25 +25,34 @@
                         </small>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="healthPointsApp.points.exercise" for="field_exercise">Exercise</label>
-                    <input type="number" class="form-control" name="exercise" id="field_exercise"
-                        [(ngModel)]="points.exercise" />
+
+                <div class="form-check">
+                    <label class="form-check-label" for="field_exercise">
+                        <input type="checkbox" class="form-check-input" name="exercise" id="field_exercise"
+                               [(ngModel)]="points.exercise" />
+                        <span jhiTranslate="healthPointsApp.points.exercise">Exercise</span>
+                    </label>
                 </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="healthPointsApp.points.meals" for="field_meals">Meals</label>
-                    <input type="number" class="form-control" name="meals" id="field_meals"
-                        [(ngModel)]="points.meals" />
+                <div class="form-check">
+                    <label class="form-check-label" for="field_meals">
+                        <input type="checkbox" class="form-check-input" name="meals" id="field_meals"
+                               [(ngModel)]="points.meals" />
+                        <span jhiTranslate="healthPointsApp.points.meals">Meals</span>
+                    </label>
                 </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="healthPointsApp.points.alcohol" for="field_alcohol">Alcohol</label>
-                    <input type="number" class="form-control" name="alcohol" id="field_alcohol"
-                        [(ngModel)]="points.alcohol" />
+                <div class="form-check">
+                    <label class="form-check-label" for="field_alcohol">
+                        <input type="checkbox" class="form-check-input" name="alcohol" id="field_alcohol"
+                               [(ngModel)]="points.alcohol" />
+                        <span jhiTranslate="healthPointsApp.points.alcohol" for="field_alcohol">Alcohol</span>
+                    </label>
                 </div>
+
+
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="healthPointsApp.points.notes" for="field_notes">Notes</label>
-                    <input type="text" class="form-control" name="notes" id="field_notes"
-                        [(ngModel)]="points.notes" maxlength="140"/>
+                    <textarea type="text" class="form-control" name="notes" id="field_notes"
+                              [(ngModel)]="points.notes" maxlength="140"></textarea>
                     <div [hidden]="!(editForm.controls.notes?.dirty && editForm.controls.notes?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.notes?.errors?.maxlength" jhiTranslate="entity.validation.maxlength" [translateValues]="{ max: 140 }">
@@ -52,11 +61,12 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" *jhiHasAnyAuthority="'ROLE_ADMIN'">
                     <label class="form-control-label" jhiTranslate="healthPointsApp.points.user" for="field_user">User</label>
                     <select class="form-control" id="field_user" name="user" [(ngModel)]="points.user" >
                         <option [ngValue]="null"></option>
-                        <option [ngValue]="userOption.id === points.user?.id ? points.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
+                        <option [ngValue]="userOption.id === points.user?.id ? points.user : userOption"
+                                *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
                     </select>
                 </div>
             </div>
