--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,4 +1,20 @@
 <div class="row">
+    <div class="col-md-11">
+        <ngb-progressbar max="21" [value]="pointsThisWeek.points"
+                         [hidden]="!pointsThisWeek.points" [striped]="true">
+            <span *ngIf="pointsThisWeek.points">
+                {{pointsThisWeek.points}} / Goal: 10
+            </span>
+        </ngb-progressbar>
+        <ngb-alert [dismissible]="false" [hidden]="pointsThisWeek.points">
+            <span jhiTranslate="home.points.getMoving">
+                No points yet this week, better get moving!</span>
+        </ngb-alert>
+    </div>
+</div>
+
+
+<div class="row">
     <div class="col-md-3">
         <span class="hipster img-fluid rounded"></span>
     </div>
